# models/DocumentType.js
@@ -6,7 +6,8 @@ const ModelSchema = new mongoose.Schema(
     {
         name:{
             type: String,
-            required:true
+            required:true,
+            unique:true,
         },
         icon:{
             type: String,
@@ -15,6 +16,13 @@ const ModelSchema = new mongoose.Schema(
         is_basic:{
             type: Boolean,
             default:false
+        },
+        type:{
+            type: String,
+            enum: ["adhar", "pan", "driving_licence","voter_id","passport","electricity","court_case"],
+            default:"adhar",
+            unique:true,
+            required:true
         },
         is_active:{
             type: Boolean,
