# routes/api.route.js
@@ -11,6 +11,8 @@ router.get("/Author/refreshToken/:refreshToken",  AuthorController.refreshToken)
 router.get("/Author/forgotpassword/:email", AuthorController.forgotpassword)
 router.patch("/Author/resetpassword/:id/:resetPawordToken",AuthorController.resetpassword)
 router.post("/Author/changePassword",authorization,AuthorController.changePassword)
+router.get("/Author/phone/verification/generateOtp/:phonenumber", AuthorController.generateotp)
+router.get("/Author/phone/verification/submitOtp/:otp/:referenceId/:phonenumber", AuthorController.submitOtp)
 router.get("/Author/list",authorization,AuthorController.list)
 router.get("/Author/view/:id",authorization,AuthorController.view)
 router.patch("/Author/update/:id",authorization,AuthorController.update)
@@ -33,8 +35,9 @@ router.delete("/Property/furnishes/delete/:id",authorization,PropertyController.
 const TenantDocumentDocumentController          =  require('../controllers/TenantDocument.js')
 router.post("/TenantDocument/create",authorization, TenantDocumentDocumentController.create)
 router.get("/TenantDocument/list",authorization,TenantDocumentDocumentController.list)
-router.get("/TenantDocument/view/:id",authorization,TenantDocumentDocumentController.view)
-router.patch("/TenantDocument/update/:id",authorization,TenantDocumentDocumentController.update)
+router.get("/TenantDocument/verify/:id/:number",authorization,TenantDocumentDocumentController.Verify)
+// router.get("/TenantDocument/view/:id",authorization,TenantDocumentDocumentController.view)
+// router.patch("/TenantDocument/update/:id",authorization,TenantDocumentDocumentController.update)
 router.delete("/TenantDocument/delete/:id",authorization,TenantDocumentDocumentController.remove)
 // router.delete("/TenantDocument/bulkdelete/:ids",authorization,LandlordDocumentController.bulkremove)
 
